# vivipi

./: .gitignore  AGENTS.md  CLAUDE.md  CODEX.md  Makefile  PLANS.md  README.md  WORKLOG.md  build  pyproject.toml
.github/: copilot-instructions.md
.github/prompts/: plan-driven-implementation.prompt.md  pr-converge.prompt.md  steer.prompt.md
.github/workflows/: ci.yml  release.yml
config/: build-deploy.local.example.yaml  build-deploy.yaml  checks.local.yaml  checks.yaml
doc/research/probes/: io-safety-and-observability.md
docs/: spec-traceability.md  spec.md  u64-firmware-fixed-defects.md  u64-firmware-smoke-root-cause.md  u64-incomplete-smoke-probe-parity.md
docs/audits/audit1/: audit.md  implementation-prompt.md
docs/research/connection-test-expansion/: plan.md  prompt.md  u64-connection-test-expansion.md
docs/research/fix-1541ultimate-network-outage/: prompt.md
docs/research/fix-buttons/: PLAN.md  fix-buttons.prompt.md
docs/research/ftp-hardening/: u64-soak-incomplete-driver-investigation.md
docs/research/network/: crash-reproduction.md  io-safety-and-observability.md  root-cause.md
docs/research/prevent-u64-outage/: prompt.md
docs/research/probe-health-indicator/: prompt.md
docs/research/productionization/: audit.md
docs/research/vivipi/: production-audit.md
docs/research/vivipulse/: parity-audit.md  prompt.md  safe-config-prompt.md
firmware/: __future__.py  __init__.py  boot.py  control.py  dataclasses.py  debug.py  display.py  enum.py  input.py  main.py  runtime.py  state.py
firmware/displays/: __init__.py  rendering.py  sh1107.py  ssd1305.py  st77xx.py  waveshare_epaper.py  waveshare_epaper_mono.py  waveshare_epaper_tricolor.py
firmware/urllib/: __init__.py  parse.py
scripts/: install_adb_service_user_units.sh  monitor_pico_buttons.py  run_adb_service.sh  u64_connection_crash_check.py  u64_connection_runtime.py  u64_connection_test.py  u64_ftp.py  u64_ftp_test.py  u64_http.py  u64_ident.py  u64_modem.py  u64_ping.py  u64_raw64.py  u64_stream.py  u64_stream_test.py  u64_syslog_server.py  u64_telnet.py  vivipulse  vivipulse_stress_test.sh
src/vivipi/: __init__.py
src/vivipi/core/: __init__.py  config.py  diagnostics.py  display.py  execution.py  freshness.py  input.py  liveness.py  logging.py  models.py  probe_trace.py  render.py  ring_buffer.py  scheduler.py  shift.py  state.py  text.py  version.py  vivipulse.py
src/vivipi/runtime/: __init__.py  app.py  checks.py  control.py  debug.py  metrics.py  state.py  syslog.py
src/vivipi/services/: __init__.py  adb.py  (+2 more)
tests/: conftest.py
tests/contract/: test_service_schema.py
tests/spec/: test_traceability.py
tests/unit/: test_package_init.py
(+48 files in other folders)
